Fix dependencies and compilation error with jdk17
pom.xml
  Fix for dependencies that are not in use and lock of plugins
  to solve the lombok compilation error when usen >jdk16